--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -14,7 +14,7 @@
 	{{/is}}
 	{{^is "author"}}
 		{{> widget-social}}
-		{{> widget-tagcloud}}
+		{{> widget-sidebartag}}
 		{{> widget-sidebarnewsletter}}
 	{{/is}}
 	{{#is "home"}}
