--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -1,7 +1,7 @@
 <!-- start widget -->
 <div class="widget contributors">
-	<h3 class="title">Contributors</h3>
-	<div class="recent-post">
+	<h3 class="footer-title">Contributors</h3>
+	<div class="contributor-container">
 		{{#get "users"}}
 			{{#foreach users}}
 				<div class="single-author {{slug}}">
