--- a/partials/widget-footernewsletter.hbs
+++ b/partials/widget-footernewsletter.hbs
@@ -1,5 +1,5 @@
 <div id="newsletter-footer" class="widget newsletter">
-    <h3 class="title">{{t "Newsletter"}}</h3>
+    <h3 class="footer-title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
     <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss your email in - we'll promise to only give you the good stuff.</p>
     {{#if @labs.subscribers}}
