--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -1,6 +1,6 @@
 <!-- start tag cloud widget -->
 <div class="widget tag">
-	<h4 class="title">Tags</h4>
+	<h4 class="footer-title">Tags</h4>
 	<div class="tag-cloud tag">
 		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
@@ -9,6 +9,4 @@
 		{{/get}}
 	</div>
 </div>
-
-
 <!-- end tag cloud widget -->
