--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -279,12 +279,11 @@
       min-height: 134px;
 
       h2 {
-        color: #37363e;
-        font-size: 1.2em;
+        color: #4d4a5e;
         line-height: 1.2;
         margin: 0;
-        font-weight: 600;
-        font-family: 'Gilroy-Regular';
+        font-family: 'ProductSans-Regular';
+        font-size: 1.4em;
       }
 
       p {
@@ -305,7 +304,7 @@
       }
 
       .postcount {
-        color: #37363F;
+        color: #4d4a5e;
         text-align: right;
         line-height: 1;
         position: absolute;
