--- a/src/less/global.less
+++ b/src/less/global.less
@@ -54,7 +54,7 @@ strong {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'Product-Sans', 'Gilroy-Regular', 'Gilroy-SemiBold', sans-serif;
+	font-family: 'ProductSans-Bold', 'Gilroy-Regular', 'Gilroy-SemiBold', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
