--- a/src/less/post.less
+++ b/src/less/post.less
@@ -54,10 +54,10 @@
 	.post-title {
 		text-align: left;
 		width: -webkit-fill-available;
-		margin: 35px 60px 10px;
+		margin: 35px 60px 0;
 		line-height: 1.2;
 		display: block;
-		font-family: 'Product-Sans', 'Gilroy-SemiBold' !important;
+		font-family: 'ProductSans-Bold', 'Gilroy-SemiBold' !important;
 		font-size: 2.4em;
 		font-weight: 600;
 		color: @h1-color;
@@ -78,7 +78,7 @@
 		a {
 			color: @h1-color;
 			transition: all 0.2s ease-out;
-			font-family: 'Product-Sans', 'Gilroy-SemiBold' !important;
+			font-family: 'ProductSans-Bold', 'Gilroy-SemiBold' !important;
 
 			&:hover {
 				color: @secondary-color;
@@ -94,10 +94,10 @@
 	.excerpt {
 		font-weight: 400;
 		font-size: 1.4em;
-		margin: 10px 60px 25px;
+		margin: 0 60px 25px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'Product-Sans', 'Gilroy-Regular';
+		font-family: 'ProductSans-Regular', 'Gilroy-Regular';
 		@media(max-width: 800px) {
 			 margin: 10px 60px 40px;
 		}
@@ -114,7 +114,7 @@
 		margin: 40px 0 10px;
 		color: #276890;
 		line-height: 1.3;
-		font-family: 'Product-Sans';
+		font-family: 'ProductSans-Regular';
 		font-weight: 400!important;
 		font-size: 2em;
 		font-size: 1.8em;
@@ -248,7 +248,7 @@
 		align-items: center;
 		min-height: 50px;
 		border-bottom: 0;
-		border-left: 5px solid #94bba0;
+		border-left: 5px solid #c8dec8;
 		background: #ecf1ec;
 		@media(max-width: 600px) {
 			padding: 15px 20px;
@@ -259,7 +259,7 @@
 		i {
 			font-size: 37px;
 			margin-right: 25px;
-			color: #94bba0;
+			color: #c8dec8;
 		}
 
 		.blurb-icon {
@@ -282,7 +282,7 @@
 
 		p {
 			line-height: 1.5!important;
-			font-family: Gilroy-Regular;
+			font-family: 'ProductSans-Italic';
 			color: #69a07a;
 			font-size: 0.95em;
 			width: 100%;
@@ -354,17 +354,14 @@
 				}
 
 				span {
-					font-family: 'Gilroy-Regular',sans-serif;
-					font-weight: 600;
+					font-family: 'ProductSans-Regular',sans-serif;
+    			font-weight: 500;
 				}
 
 				.tags {
 					height: 18px !important;
 					padding: 8px 10px;
 
-					span {
-						font-family: 'Gilroy-Regular',sans-serif !important;
-					}
 					@media(max-width: 600px) {
 						height: 20px !important;
 						padding: 8px 10px;
