--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -151,6 +151,7 @@
 			span {
 				line-height: 1;
 				font-size: .7em;
+				font-family: 'ProductSans-Medium';
 			}
 
 			&:hover {
@@ -242,11 +243,11 @@
 
 		span {
 			font-size: .7em;
+			font-family: 'ProductSans-Medium';
 		}
 
 		.share-icons {
 			z-index: 20;
-
 		}
 	}
 
