--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -62,7 +62,7 @@
         font-size: 1.4em;
 
         a {
-          font-family: 'Product-Sans','CompassSans-Light',sans-serif;
+          font-family: 'ProductSans-Medium','CompassSans-Light',sans-serif;
           font-weight: 500;
         }
       }
