--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -71,7 +71,7 @@
 
 		@media(max-width: 600px) {
 			height: 50vw;
-			max-height: 180px;
+			max-height: 210px;
 		}
 
 		.post-card-image {
@@ -103,14 +103,10 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'Product-Sans', 'Gilroy-Regular';
-
-			.title-link {
-
-			}
+			font-family: 'ProductSans-Bold', 'Gilroy-Regular';
 
 			@media(max-width: 600px) {
-				font-size: 1.5em;
+				font-size: 1.65em;
 				margin: 0 0 10px;
 				font-weight: 700;
 				line-height: 1.2em;
@@ -119,7 +115,7 @@
 			a {
 				color: @text-color-heading;
 				transition: all 0.2s ease-out;
-				font-family: 'Product-Sans','CompassSans-Light',sans-serif;
+				font-family: 'ProductSans-Medium','CompassSans-Light',sans-serif;
 
 				&:hover {
 					color: @secondary-color;
@@ -134,10 +130,9 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'Product-Sans', 'Gilroy-SemiBold',Gilroy-Regular,serif;
+			font-family: 'ProductSans-Medium', 'Gilroy-SemiBold',Gilroy-Regular,serif;
 			@media(max-width: 600px) {
 				font-size: 1em;
-				font-family: Product-Sans;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
 				overflow: hidden;
@@ -197,12 +192,17 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'Gilroy-Regular','Gilroy-Regular';
+			font-family: 'Gilroy-SemiBold','Gilroy-Regular', 'sans-serif';
 		}
 
 		.author-mobile {
 			display: none;
 			align-items: center;
+
+			.avi {
+				width: 45px;
+    		height: 45px;
+			}
 
 			.info {
 
@@ -210,12 +210,14 @@
 					display: block;
 				}
 				.mobile-name {
-					font-weight: 600;
-					margin-bottom:3px;
-					font-size: 1em;
+					font-size: 1.2em;
+					font-family: 'ProductSans-Regular';
+					margin-bottom: 8px;
+					letter-spacing: 1px;
 				}
 				.mobile-date {
-					font-size: .85em;
+					font-family: 'Gilroy-Regular';
+					font-size: 1em;
 				}
 			}
 
@@ -223,7 +225,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'Gilroy-Regular','Gilroy-SemiBold';
+				font-family: 'Gilroy-SemiBold';
 				color: #224a69;
 			}
 			@media (max-width: 800px) {
@@ -233,7 +235,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'Gilroy-Regular','Gilroy-Regular', 'CompassSans-Light';
+			font-family: 'Gilroy-SemiBold','Gilroy-Regular';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -259,6 +261,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 12px;
+					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
 				}
 
 				i {
@@ -298,7 +301,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'Gilroy-Regular','Gilroy-Regular', 'CompassSans-Light' !important;
+					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
 					color: #627d90;
 					line-height: 1;
 					overflow: hidden;
@@ -315,7 +318,7 @@
 
 			&.date {
 				span {
-					font-family: 'Gilroy-Regular',Gilroy-Regular,sans-serif;
+					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -363,7 +366,7 @@
 .content {
 	padding: 20px 30px;
 	@media(max-width: 600px) {
-		 padding: 25px;
+		 padding: 15px 20px 20px;
 	}
 }
 
