--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -197,8 +197,8 @@ header{
     }
 
     a {
-      font-size: .85em;
-      font-family: 'Product-Sans';
+      font-family: 'ProductSans-Medium';
+      font-size: .9em;
       text-transform: uppercase;
       transform: scale(1);
       color: #505f77;
