--- a/src/less/series.less
+++ b/src/less/series.less
@@ -158,7 +158,7 @@
             font-size: 0.9em;
             @media(max-width: 600px) {
               font-size: 0.85em;
-              font-family: 'Product-Sans','CompassSans-Light',sans-serif;
+              font-family: 'ProductSans-Regular','CompassSans-Light',sans-serif;
             }
           }
           @media(max-width: 600px) {
@@ -169,7 +169,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'Product-Sans','Gilroy-Regular',serif;
+          font-family: 'ProductSans-Regular','Gilroy-Regular',serif;
           font-size: 0.9em;
           font-weight: 100;
           line-height: 1.21;
