--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -12,7 +12,7 @@
 
   .post-title a {
     font-size: 1em !important;
-    font-family: 'Product-Sans',Gilroy-Regular;
+    font-family: 'ProductSans-Bold',Gilroy-Regular;
   }
 }
 
