--- a/partials/widget-sidebarnewsletter.hbs
+++ b/partials/widget-sidebarnewsletter.hbs
@@ -1,6 +1,6 @@
 <!-- start widget -->
 <div id="newsletter-sidebar" class="widget newsletter">
-    <h3 class="title">{{t "Newsletter"}}</h3>
+    <h3 class="sidebar-title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
     <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss your email in - we'll promise to only give you the good stuff.</p>
     {{#if @labs.subscribers}}
