--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -7,109 +7,78 @@
 
 /* latin */
 @font-face {
-  font-family: 'Product-Sans';
+  font-family: 'ProductSans-LightItalic';
   font-style: italic;
   font-weight: 300;
-  src: local('Product-Sans Light Italic'), local('ProductSans-LightItalic'), url("https://fonts.gstatic.com/s/productsans/v9/pxieypQkot1TnFhsFMOfGShVEu8nSllDimuCpPpP.woff2") format('woff2');
+  src: local('Product-Sans Light Italic'), local('ProductSans-LightItalic'), url("../../assets/fonts/ProductSans-LightItalic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Product Sans';
+  font-family: 'ProductSans-Light';
   font-style: normal;
   font-weight: 300;
-  src: local('Product Sans Light'), local('ProductSans-Light'), url("https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdvPWbT2lBgGygpg.woff2") format('woff2');
+  src: local('Product Sans Light'), local('ProductSans-Light'), url("../../assets/fonts/ProductSans-Light.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Product-Sans';
+  font-family: 'ProductSans-Italic';
   font-style: italic;
   font-weight: 400;
-  src: local('Product-Sans Italic'), local('ProductSans-Italic'), url("https://fonts.gstatic.com/s/productsans/v9/pxidypQkot1TnFhsFMOfGShVEueMaExuqGao.woff2") format('woff2');
+  src: local('Product-Sans Italic'), local('ProductSans-Italic'), url("../../assets/fonts/ProductSans-Italic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Product Sans';
+  font-family: 'ProductSans-Regular';
   font-style: normal;
   font-weight: 400;
-  src: local('Product Sans'), local('ProductSans-Regular'), url("https://fonts.gstatic.com/s/productsans/v9/pxiDypQkot1TnFhsFMOfGShVF9eOYktMqg.woff2") format('woff2');
+  src: local('Product Sans'), local('ProductSans-Regular'), url("../../assets/fonts/ProductSans-Regular.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Product-Sans';
+  font-family: 'ProductSans-MediumItalic';
   font-style: italic;
   font-weight: 500;
-  src: local('Product-Sans Medium Italic'), local('ProductSans-MediumItalic'), url("https://fonts.gstatic.com/s/productsans/v9/pxieypQkot1TnFhsFMOfGShVEu9_S1lDimuCpPpP.woff2") format('woff2');
+  src: local('Product-Sans Medium Italic'), local('ProductSans-MediumItalic'), url("../../assets/fonts/ProductSans-MediumItalic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
 @font-face {
-  font-family: 'Product-Sans';
+  font-family: 'ProductSans-BoldItalic';
   font-style: italic;
   font-weight: 700;
-  src: local('Product-Sans Bold Italic'), local('ProductSans-BoldItalic'), url("https://fonts.gstatic.com/s/productsans/v9/pxieypQkot1TnFhsFMOfGShVEu83TVlDimuCpPpP.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'Product-Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Product-Sans Light'), local('ProductSans-Light'), url("https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdvPWbT2lBgGygpg.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'Product-Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Product-Sans'), local('ProductSans-Regular'), url("https://fonts.gstatic.com/s/productsans/v9/pxiDypQkot1TnFhsFMOfGShVF9eOYktMqg.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* cyrillic */
-@font-face {
-  font-family: 'Product-Sans';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShd5PSbS2lBgGygpspO.woff2") format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* latin */
-@font-face {
-  font-family: 'Product-Sans';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShd5PSbT2lBgGygpg.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'Product-Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdrPKbT2lBgGygpg.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'Product-Sans';
-  font-style: normal;
-  font-weight: 900;
-  src: local('Product-Sans Black'), local('ProductSans-Black'), url("https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdlPCbT2lBgGygpg.woff2") format('woff2');
+  src: local('Product-Sans Bold Italic'), local('ProductSans-BoldItalic'), url("../../assets/fonts/ProductSans-BoldItalic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* latin */
 @font-face {
-  font-family: 'Gilroy-Regular';
-  src: url("../../assets/fonts/Gilroy-Regular.woff2");
+  font-family: 'ProductSans-Medium';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+/* latin */
 @font-face {
-  font-family: 'Gilroy-SemiBold';
-  src: url("../../assets/fonts/Gilroy-SemiBold.woff2");
+  font-family: 'ProductSans-Bold';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("../../assets/fonts/ProductSans-Bold.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+/* latin */
+@font-face {
+  font-family: 'ProductSans-Black';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Product-Sans Black'), local('ProductSans-Black'), url("../../assets/fonts/ProductSans-Black.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 
 @font-face {
   font-family: "dm";
