more tweak idk suck it

--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -280,10 +280,11 @@
 
       h2 {
         color: #4d4a5e;
-        line-height: 1.2;
-        margin: 0;
         font-family: 'ProductSans-Regular';
-        font-size: 1.4em;
+        margin-bottom: 7px;
+        margin-top: 0;
+        font-size: 1.3em;
+        line-height: 1.2;
       }
 
       p {
