--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -446,8 +446,11 @@
 			background-size: contain !important;
 			display: block;
 			background-repeat: no-repeat;
+			display: none;
+		}
 
-
+		p {
+			font-size: 13px;
 		}
 
 		.post-title {
