--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -196,7 +196,11 @@
 			}
 
 			.role {
-				color: #cae4f3;
+				color: hsla(0, 0%, 100%, 0.7);
+				display: block;
+				font-family:' Gilroy-Regular';
+				font-size: .8em;
+				margin-top: 6px;
 			}
 		}
 	}
