series page styles

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -16,11 +16,11 @@
 	}
 
 	.widget.tag {
-			width: 32% !important;
+		width: 32% !important;
 	}
 
 	.widget.contributors {
-		 width: 25%;
+		width: 25%;
 	}
 
 	.footer-title {
@@ -54,8 +54,6 @@
 		display: block;
 		padding: 0 20px 20px;
 	}
-
-
 }
 /*====================================================
 		newsletter
@@ -198,8 +196,8 @@
 			.role {
 				color: hsla(0, 0%, 100%, 0.7);
 				display: block;
-				font-family:' Gilroy-Regular';
-				font-size: .8em;
+				font-family: ' Gilroy-Regular';
+				font-size: 0.8em;
 				margin-top: 6px;
 			}
 		}
@@ -210,7 +208,6 @@
 	padding: 10px 0;
 	width: 28%;
 	margin: 0;
-
 	@media(max-width: 800px) {
 		padding: 0 20px;
 		width: -webkit-fill-available;
@@ -230,8 +227,6 @@
 	}
 }
 
-
-
 .tag-cloud {
 	display: flex;
 	flex-direction: row;
@@ -240,6 +235,9 @@
 	min-width: 34%;
 	@media(max-width: 600px) {
 		margin-bottom: 10px;
+		max-width: none;
+		width: -webkit-fill-available;
+		width: -moz-fill-available;
 	}
 
 	a {
