post preview nuances and tag cloud colors

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -18,6 +18,15 @@
 	.widget.tag {
 		width: 32% !important;
 
+		a {
+			color:white;
+
+			&:hover{
+				cursor: pointer;
+				color: @hover-color;
+			}
+		}
+
 		@media(max-width: 800px) {
 			margin-bottom: 10px;
 			max-width: none;
@@ -183,6 +192,11 @@
 
 			a {
 				color: #fff;
+
+				&:hover{
+					cursor: pointer;
+					color: @hover-color;
+				}
 			}
 
 			&:last-child {
