--- a/src/less/post.less
+++ b/src/less/post.less
@@ -58,10 +58,14 @@
 		line-height: 1.2;
 		display: block;
 		font-family: 'ProductSans-Bold', 'Gilroy-SemiBold' !important;
-		font-size: 2.4em;
+		font-size: 2.2em;
 		font-weight: 600;
+		letter-spacing: 0;
+		line-height: 1.1;
+		text-align: left;
+		margin-bottom: 5px;
 		color: @h1-color;
-		letter-spacing: 1px;
+
 		@media(max-width: 800px) {
 			margin: 30px 60px 10px;
 			font-size: 2.2em;
@@ -372,7 +376,7 @@
 					}
 					span {
 						font-weight: 600 !important;
-						font-size: 1.1em !important;
+						font-size: 1em !important;
 					}
 
 					&.codesnippetcorner {
@@ -955,7 +959,7 @@
 				display: block;
 				line-height: 1em;
 				margin-bottom: 8px;
-				font-size: 0.8em;
+				font-size: 0.9em;
 
 				i {
 					margin-right: 8px;
@@ -966,11 +970,13 @@
 		.bio {
 			display: block;
 			line-height: 1.5;
-			margin-top: 20px;
-			font-weight: 300;
+			margin-top: 10px;
 			width: 100%;
 			clear: both;
-			font-size: 0.9em;
+			font-size: .95em;
+			font-weight: 600;
+			line-height: 1.5;
+			color: #606677;
 		}
 
 		.author {
