--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -33,11 +33,12 @@
 		a {
 			color: #119ac3;
 			background: #ecf1f9;
-			font-size: .95em;
+			font-size: .8em;
 			margin-right: 15px;
 			transition: all .3s;
 			line-height: 1;
 			padding: 8px 10px;
+			font-family: 'Gilroy-SemiBold';
 			@media(max-width:800px) {
 				margin: 0 0 8px;
 			}
