--- a/partials/copyright.hbs
+++ b/partials/copyright.hbs
@@ -2,7 +2,7 @@
 <div class="copyright">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="">
 				<span>{{t "Copyright"}} &copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a></span><br>
 				<span class="rights">All rights Reserved.</span>
 			</div>
