--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -26,7 +26,7 @@
 @import 'swiper.less';
 @import 'transactional.less';
 @import 'table.less';
-@import 'comments.less';
+/*@import 'comments.less';*/
 @import 'signup.less';
 @import 'author-card.less';
 @import 'fonts.less';
