--- a/default.hbs
+++ b/default.hbs
@@ -14,10 +14,8 @@
 	{{! Scripts }}
 	<!--<script src="{{asset "/webpack/my-webpack.bundle.js"}}"></script>-->
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.1.1/stitch.js"></script>
+	<!--<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.1.1/stitch.js"></script>-->
 	<script type="text/javascript" src="{{asset "/js/includes/retina.min.js"}}"></script>
-
-	{{> mongodb}}
 
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
