--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -267,7 +267,7 @@
 	.widget {
 		margin-right: 25px!important;
 		width: -webkit-fill-available;
-		width: -moz-fill-available;
+		width: -moz-available;
 
 		&:first-of-type {
 			padding-top: 0;
@@ -392,7 +392,7 @@
 
 			button {
 				width: -webkit-fill-available !important;
-				width: -moz-fill-available !important;
+				width: -moz-available !important;
 				background: linear-gradient(165deg,#40a2a2,#1f68a7);
 				box-shadow: 2px 2px 3px 0 #647498;
 				padding: 13px 20px;
@@ -447,10 +447,6 @@
 			display: block;
 			background-repeat: no-repeat;
 			display: none;
-		}
-
-		p {
-			font-size: 13px;
 		}
 
 		.post-title {
@@ -513,7 +509,7 @@
 
 		p {
 			color: #444444;
-			font-size: 12px;
+			font-size: 14px;
 			opacity: 0.7;
 			margin: 0;
 			white-space: inherit;
@@ -531,7 +527,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'Gilroy-Regular', 'CompassSans-Light', sans-serif;
+		font-family: 'Gilroy-SemiBold', 'CompassSans-Light', sans-serif;
 		font-weight: 100;
 		display: inline-block;
 
