--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -182,7 +182,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'Gilroy-Regular','Gilroy-Regular',serif;
+		font-family: 'Gilroy-Regular', sans-serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -191,13 +191,10 @@
 			width: 70%;
 		}
 
-
 		@media(max-width:600) {
-			width: auto;
+			width: 100% !important;
 			padding-right: 0 !important;
 			margin-right: 0;
-			justify-content: space-between;
-			align-items: center;
 		}
 
 		a {
