--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -1,13 +1,13 @@
-<!-- start tag cloud widget -->
+<!-- start series widget -->
 <div class="widget series">
 	<h3 class="title">Series'</h3>
 	<div>
 		{{#get "tags" limit="9" filter="feature_image:-null" include="count.posts,meta_title,slug" order="count.posts DESC"}}
-    {{#foreach tags}}
+    {{#foreach tags visibility="internal"}}
       <div class="recent-single-post">
 				<div class="series-image {{slug}}"></div>
 				<div class="series-info">
-        <a href="{{url}}" class="post-title">{{meta_title}}</a>
+        <a href="{{url}}" class="post-title">{{title}}</a>
         {{!--<span class="count">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>--}}
         {{#if description}}
           <p class="description">{{description}}</p>
@@ -18,4 +18,4 @@
     {{/get}}
 	</div>
 </div>
-<!-- end tag cloud widget -->
+<!-- end series cloud widget -->
