--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -39,9 +39,9 @@
   <div class="widget" style="order:10">
   	<div class="twitter">
   		<h3 class="title">Twitter</h3>
-        <!-- start feedwind code -->
-        <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="96505/"></script> 
-        <!-- end feedwind code -->
+      <iframe src="https://feed.mikle.com/widget/v2/96505/" height="629px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+
+
     </div>
   </div>
 
