--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -7,7 +7,7 @@
       <div class="recent-single-post">
 				<div class="series-image {{slug}}"></div>
 				<div class="series-info">
-        <a href="{{url}}" class="post-title">{{title}}</a>
+        <a href="{{url}}" class="post-title">{{meta_title}}</a>
         {{!--<span class="count">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>--}}
         {{#if description}}
           <p class="description">{{description}}</p>
