--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -263,4 +263,13 @@
       color: #155a8b !important;
     }
   }
+
+  .saas {
+    background: #acf5fb;
+    color: #155a8b;
+
+    * {
+      color: #155a8b !important;
+    }
+  }
 }
