--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -193,9 +193,11 @@
 		}
 
 		@media(max-width:600) {
-			width: 100% !important;
 			padding-right: 0 !important;
 			margin-right: 0;
+			display: flex;
+			max-width: none;
+    	min-width: 100% !important;
 		}
 
 		a {
