--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -31,7 +31,7 @@
 			margin-bottom: 10px;
 			max-width: none;
 			width: -webkit-fill-available !important;
-			width: -moz-fill-available !important;
+			width: -moz-available !important;
 		}
 	}
 
@@ -42,7 +42,7 @@
 			margin-bottom: 10px;
 			max-width: none;
 			width: -webkit-fill-available;
-			width: -moz-fill-available;
+			width: -moz-available;
 		}
 	}
 
@@ -266,7 +266,7 @@
 		margin-bottom: 10px;
 		max-width: none;
 		width: -webkit-fill-available !important;
-		width: -moz-fill-available !important;
+		width: -moz-available !important;
 	}
 
 	a {
