--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -130,12 +130,14 @@
 			color: #153b52;
 			font-family: 'ProductSans-Medium', 'Gilroy-SemiBold',Gilroy-Regular,serif;
 			@media(max-width: 600px) {
-				font-size: 1em;
+				font-family: 'ProductSans-Regular',Gilroy-SemiBold,Gilroy-Regular,serif;
+				font-size: 1.2em !important;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
 				overflow: hidden;
 				display: -webkit-box;
 				text-overflow: ellipsis;
+
 			}
 		}
 	}
