--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -10,10 +10,8 @@
 	color: #fff;
 	margin-top: 30px;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
-	background-repeat-y: repeat;
-	@media(max-width: 1040px) {
-		background-size: contain;
-	}
+
+
 
 	.widget.tag {
 		width: 32% !important;
@@ -26,13 +24,13 @@
 				color: @hover-color;
 			}
 		}
-
 		@media(max-width: 800px) {
 			margin-bottom: 10px;
 			max-width: none;
-			width: -webkit-fill-available !important;
-			width: -moz-available !important;
+			min-width: -webkit-fill-available !important;
+			min-width: -moz-available !important;
 		}
+
 	}
 
 	.widget.contributors {
@@ -41,8 +39,8 @@
 		@media(max-width: 800px) {
 			margin-bottom: 10px;
 			max-width: none;
-			width: -webkit-fill-available;
-			width: -moz-available;
+			min-width: -webkit-fill-available !important;
+			min-width: -moz-available !important;
 		}
 	}
 
