--- a/src/less/code.less
+++ b/src/less/code.less
@@ -498,7 +498,7 @@ blockquote .language-python {
 
   .handlebars,
   .hljs.html,
-  .hljs.xml,
+  .language-xml,
   .language-handlebars {
     .tag {
       color: #98bfd4;
@@ -528,6 +528,12 @@ blockquote .language-python {
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
+    }
+  }
+
+  .language-xml {
+    &::before {
+      content: "HTML" !important;
     }
   }
 
