--- a/src/less/post.less
+++ b/src/less/post.less
@@ -659,16 +659,18 @@
 	}
 
 	figcaption {
-		text-align: center;
-		margin: 0 auto 0;
-		font-size: .9em;
-		color: #5e6167;
-		white-space: nowrap;
-		font-style: italic;
-		background-color: rgba(33, 69, 138, 0.04);
-		padding: 10px 0;
-		margin-top: -10px;
-		width: 100%;
+		width: -webkit-fill-available;
+		width: -moz-available;
+    margin: 0 auto 0;
+    margin-top: -10px;
+    padding: 10px;
+    background-color: rgba(33,69,138,.04);
+    color: #5e6167;
+    font-size: .8em;
+    font-style: italic;
+    text-align: center;
+    white-space: normal;
+    line-height: 1.5;
 		@media(max-width: 600px) {
 			margin-top: -5px;
 			font-size: 12px !important;
