--- a/src/less/code.less
+++ b/src/less/code.less
@@ -498,7 +498,7 @@ blockquote .language-python {
 
   .handlebars,
   .hljs.html,
-  .language-xml,
+  .language-html,
   .language-handlebars {
     .tag {
       color: #98bfd4;
@@ -533,7 +533,7 @@ blockquote .language-python {
 
   .language-xml {
     &::before {
-      content: "HTML" !important;
+      content: "XML" !important;
     }
   }
 
