--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -92,7 +92,7 @@
 /* Next & Prev buttons on post pages */
 
 .prev-next-wrap {
-	margin: 0;
+	margin: 20px 0 0 0;
 	padding: 0;
 	display: flex;
 	align-items: center;
